READMEs: update for GTK3
More thorough listing of libs and version numbers which work.

Debian command-lines for installing the required packages in one go.

--- a/README
+++ b/README
@@ -36,14 +36,14 @@ Install (for packagers):
         limiting.)
 
 
-Required: pygtk, python, swig, gtk, numpy, pycairo(>=1.4), libpng,
+Required: pygobject, gtk3, python, swig, numpy, pycairo(>=1.4), libpng,
             lcms2, json-c
 
 Debian users can fetch these dependencies by running:
 
-    # apt-get install g++ python-dev libglib2.0-dev python-numpy \
-                      python-gtk2-dev swig scons gettext libpng12-dev \
-                      liblcms2-dev libjson0-dev
+    # apt-get install g++ python-dev python-numpy \ 
+        libgtk-3-dev python-gi-dev gir1.2-gtk-3.0 python-gi-cairo \ 
+        swig scons gettext libpng12-dev liblcms2-dev 
 
 Recommended: a pressure sensitive input device (graphic tablet)
 
