README: mention pygobject config
Most Linux distros already contain some sort of package with _gi_cairo.so
available, but local compilations will require pygobject to be configured
with --enable-cairo to gain the introspection glue we need.

--- a/README
+++ b/README
@@ -38,6 +38,8 @@ Install (for packagers):
 
 Required: pygobject, gtk3, python, swig, numpy, pycairo(>=1.4), libpng,
             lcms2, json-c
+    (NOTE: pygobject must be built with --enable-cairo)
+
 
 Debian users can fetch these dependencies by running:
 
