Update README: librsvg dep.; remove gtk3 notes
Mention librsvg as a runtime dependency. As noted in
https://gna.org/bugs/?21482 , the GtkPixbuf loader module is commonly
supplied in a separate optional package, and users will need to make sure
that it's installed in order to get icons now.

Remove the GTK3 notes, since the migration bug has now been closed.

--- a/README
+++ b/README
@@ -37,7 +37,7 @@ Install (for packagers):
 
 
 Required: pygobject, gtk3, python, swig, numpy, pycairo(>=1.4), libpng,
-            lcms2, json-c
+            lcms2, json-c, librsvg
     (NOTE: pygobject must be built with --enable-cairo)
 
 
